# vtk

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: csharp-bindings.yml
CMake/: vtkModuleWrapCSharp.cmake  vtkWrapSettings.cmake
Utilities/CSharp/: CMakeLists.txt  vtk.module  vtkCSharpUtil.cxx  vtkCSharpUtil.h
Wrapping/CSharp/: CMakeLists.txt  VTK.CSharp.csproj.in  vtkCSharpHelper.cxx
Wrapping/CSharp/Testing/: CMakeLists.txt  CSharpBindingCoverage.cs  CSharpConcurrencyGC.cs  CSharpDelete.cs  CSharpGCAndDelete.cs  CSharpRegression.cs  Program.cs  VTK.CSharp.Tests.csproj.in
Wrapping/CSharp/vtk/: VtkGarbageCollector.cs  VtkNativeLibrary.cs.in  VtkObjectManager.cs  VtkReferenceInformation.cs  vtkObjectBase.cs
Wrapping/Tools/: CMakeLists.txt  vtkParseCSharp.c  vtkWrapCSharp.c
docs/: csharp-bindings-analysis.md
